src/test/minijava/success/ExtendsTest.mjava
class A {

}

class B extends A {

}

public class ExtendsTest {

    public static void main(String[] args) {
        A a = new B();
    }
}