src/test/minijava/error/DoubleClass.mjava
class A {
}

class A {
    // Erreur: double définition de la classe A
}

public class DoubleClass {

    public static void main(String[] args) {
    }
}